--- a/source/admin/index.ejs
+++ b/source/admin/index.ejs
@@ -38,7 +38,7 @@ backend:
 production:
   backend:
     name: github-api
-    repo: user/repo
+    repo: AlcoholiO/hexo-netlify-cms-demo
     branch: master
 
 media_folder: "source/assets/images" # Folder where user uploaded files should go
